Fix some styling bugs on mobile for a few pages and the h1 heading

--- a/src/components/ArtistPageH1/ArtistPageH1.module.scss
+++ b/src/components/ArtistPageH1/ArtistPageH1.module.scss
@@ -1,5 +1,9 @@
 .h1-section {
   padding: 4rem 0;
+
+  & + section {
+    padding-top: 0;
+  }
 }
 .heading {
   .heading-img {
