--- a/src/pages/liliona-quarmyne.module.scss
+++ b/src/pages/liliona-quarmyne.module.scss
@@ -1,19 +1,12 @@
 .content-section {
-  @include bg-line-art('../assets/flipped-desktop-line-bg.svg', bottom right);
-
-  @include break('mobile') {
-    @include bg-line-art('../assets/flipped-mobile-line-bg.svg', bottom right);
-    background-size: contain;
-  }
+  position: relative;
+  @include bg-line-art('../assets/flipped-mobile-line-bg.svg', bottom right);
+  background-size: contain;
 }
 
 .video-wrapper {
-  position: relative;
-  grid-column: 6 / -6;
-
-  @include break('tablet') {
-    grid-column: 2 / -2;
-  }
+  width: 100%;
+  grid-column: 2 / -2;
 
   &>div {
     margin: 0 !important;
@@ -28,15 +21,21 @@
   position: absolute;
   z-index: 10;
   width: 100%;
+  grid-column: 2 / -2;
 }
 
 .divider {
   position: absolute;
   z-index: 5;
   background-color: $grey-bg;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
   width: 100%;
   height: 100%;
-  max-height: 560px;
+  @include bg-line-art('../assets/flipped-mobile-line-bg.svg', bottom right);
+  background-size: contain;
 }
 
 .white {
